Fixed bulleted list alignment

--- a/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
@@ -23,10 +23,6 @@
   clear: left;
 }
 
-.ck-editor figure.drupal-entity.align-left.ck-widget + ul {
-  list-style-position: inside;
-}
-
 .ck-content ul ul,
 .ck-content ol ul {
   padding-left: 20px;
