--- a/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
@@ -352,6 +352,11 @@ html:has([data-fullscreen="fullscreenoverlay"]) .ck.ck-dropdown__panel.ck-dropdo
   font-size: 1.375rem;
 }
 
+.js-lpb-component-list .ma__rich-text ul {
+  list-style-position: outside;
+  margin-left: 0;
+}
+
 .js-lpb-component-list .ma__callout-message .ma__rich-text ul:last-child {
   margin-bottom: revert;
 }
